# tool-hub

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: architecture.md  guide-new-tool.md  pitfalls.md  project-spec.md  python-notes.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: index.ts
frontend/src/components/: MIPImportTab.vue  ToolPanel.vue
frontend/src/router/: index.ts
frontend/src/views/: EncodingConverterPage.vue  FinancialSystemPage.vue  MIPCustomsPage.vue  MainPage.vue  PDDOrderPage.vue  PushWeightPage.vue  TemuGatewayPage.vue
src/tool_hub/: __init__.py  config.py  logging.py  main.py  models.py  tool_registry.py  tool_state.py
src/tool_hub/tools/: __init__.py  base.py  common_errors.py
src/tool_hub/tools/encoding_converter/: __init__.py  router.py  tool.py
src/tool_hub/tools/financial_system/: __init__.py  config.py  router.py  tool.py
src/tool_hub/tools/mip_customs/: README.md  __init__.py  client.py  config.py  excel_import.py  exceptions.py  import_config.py  import_state.py  import_task.py  models.py  tool.py
src/tool_hub/tools/pdd_order/: __init__.py  client.py  config.py  field_generator.py  models.py  pdd_state.py  product_weight.py  router.py  sign_utils.py  tool.py
src/tool_hub/tools/push_weight/: __init__.py  config.py  router.py  tool.py
src/tool_hub/tools/temu_gateway/: __init__.py  client.py  config.py  crypto_utils.py  models.py  router.py  tool.py
